# straw

./: .gitignore  CHANGELOG.md  LICENSE  README.md  download_test.js  find_keys.js  package-lock.json  package.json  player_api_dump.json  pyproject.toml  release.bat  test_api.js  test_api_clients.js  test_aqz.js  test_client.js  test_embed.js  test_extract.js  test_html.js  test_metadata.js  test_next.js  test_visitor.js  test_vr.js  test_yt.js  tsconfig.json  ytInitialData_dump.json
docs/: api_reference.md  getting_started.md
src/: index.ts
src/core/: client.ts
src/scrapers/: media.ts  web.ts  youtube.ts
src/utils/: helpers.ts
straw/: __init__.py  client.py  helpers.py  media.py  web.py  youtube.py
tests/: test.py  test.ts
