[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "straw-scraper"
version = "1.0.0"
description = "A high-performance, enterprise-grade scraping library for Python."
authors = [
    { name = "ZetaGo-Aurum" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0"
]
keywords = ["scraping", "scraper", "youtube-scraper", "media-extractor", "anti-cors"]
license = { text = "ISC" }

[project.urls]
Homepage = "https://github.com/ZetaGo-Aurum/straw"
